# data-analytics-project-template

./: .gitignore  readme.md  template-license  template-readme.md
artifacts/: group-skills.xlsx  population-1950-2021-eda-output.csv  readme.md
assets/: 2021-12Dec-11-population-estimates-1950-2021-pea01.csv  readme.md
docs/: assessment-criteria.md  build-python-package.md  build-requirements.md  code-style-guide.md  gantt-chart.md  install-nbautoexport.md  install-python-package.md  jupyter-notebook-layout-guide.md  knowledge-skills-abilities.md  notebook-managers.md  project-structure-guide.md  readme.md  setup-jupyter.md  template-todo.md
docs/images/: gantt-chart.jfif
junk-dna/: readme.md
maps/: readme.md
maps/irl-adm1/: IRL_ADM1.dbf  IRL_ADM1.shx  metadata.json
notebooks/: .nbautoexport  config.ini.sample  notebook-1-01-example-bad-code-population.ipynb  notebook-1-02-dc-twitter-api.ipynb  notebook-2-01-example-better-code-population-eda.ipynb  notebook-2-02-example-better-code-population-dv.ipynb  readme.md
notebooks/notebook-1-01-example-bad-code-population/: requirements.txt
python-package/: license  readme.md  requirements.txt  setup.cfg
python-package/project_name/: dataframe_labels.py  project_manager.py
python-package/tests/: test_basic.py
references/: 2021-11nov-03-data-scientists-your-variable-names-are-awful.md  2021-11nov-03-pep-515-underscores-in-numeric-literals.md  2021-11nov-03-pep-8-style-guide-for-python-code.md  2021-11nov-04-python-3-f-strings.md  2021-11nov-04-to-camel-case-or-under-score.md  readme.md
(+10 files in other folders)
