[metadata]
name = PACKAGE_NAME
version = 0.0.1
author = Mark Crowe
author_email = YOUR_EMAIL@users.noreply.github.com
description = Data analytic functions for the project.
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/markcrowe-com/data-analytics-project-template/
project_urls =
    Bug Tracker = https://github.com/markcrowe-com/data-analytics-project-template/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
